--- a/package.json
+++ b/package.json
@@ -3,24 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
+    "coffeelint": "^1.16.0",
     "grunt": "^1.0.0",
+    "grunt-build-control": "^0.7.1",
+    "grunt-cli": "^1.3.2",
+    "grunt-coffeelint": "0.0.16",
     "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-watch": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "^1.1.0",
-    "load-grunt-tasks": "^3.5.2",
-    "grunt-build-control": "^0.7.1",
-    "grunt-coffeelint": "0.0.16",
-    "coffeelint": "^1.16.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "load-grunt-tasks": "^3.5.2"
   },
   "engines": {
     "node": ">=4"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:sunye/software-patterns.git"
-  },
-  "scripts": {
-    "test": "grunt test"
-  }
+    "scripts": {
+        "serve": "grunt serve",
+        "dist": "grunt dist"
+    }
+
 }
