--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   "scripts": {
     "serve": "grunt serve",
     "dist": "grunt dist",
-    "bower": "bower install"
+    "bower": "bower install --allow-root"
   }
 }
