--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ stages:
 build:
   stage: build
   script:
-   - bash /home/compile.sh
+#   - bundle install
+   - make slides
   artifacts:
     paths:
       - target
